--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,5 @@
 @import "blocks/header.css";
-@import "blocks/intro.css";
-@import "blocks/loader.css";
-@import "blocks/content.css";
+@import "blocks/menu.css";
 
 * {
     box-sizing: border-box;
@@ -33,10 +31,15 @@ html, body {
     padding: 1% 5%;
     margin: 0;
 }
+.container-max {
+    width: 100%;
+    padding: 1% 5%;
+    margin: 0;
+}
 ::-webkit-scrollbar {
-    width: calc(var(--size)*0.8);
+    width: calc(var(--size)*0.6);
     height: calc(var(--size)*1.6);
-    background-color: #000;
+    background-color: rgb(254,254,254,.1)
 }
 ::-webkit-scrollbar-thumb {
     background-color: var(--orange);
