--- a/assets/css/blocks/parthner.css
+++ b/assets/css/blocks/parthner.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 5% 0;
+    margin: 5% 0 10% 0;
 }
 .parthner_item {
     display: flex;
@@ -24,4 +24,13 @@
 }
 .parthner__block:hover {
     opacity: 1;
+}
+@media screen and (max-width:660px) {
+    .parthner__block {
+        margin: 0 1%;
+    
+        width: 100%;
+        max-width: calc(var(--size)*20);
+        /* box-shadow: 2px 2px 6px  black; */
+    }
 }
