--- a/assets/css/blocks/interesting.css
+++ b/assets/css/blocks/interesting.css
@@ -35,17 +35,17 @@
 }
 @media screen and (max-width:660px) {
     .interest__block {
-        width: calc(var(--size)*30);
-        height: calc(var(--size)*20);
+        width: 40%;
+        height: calc(var(--size)*30);
         margin: 3%;
     }
     .interest__num {
-        font-size: calc(var(--size)*8);
-        line-height: calc(var(--size)*7);
+        font-size: calc(var(--size)*12);
+        line-height: calc(var(--size)*12);
     }
     .interest__p {
         text-align: center;
-        font-size: calc(var(--size)*3);
+        font-size: calc(var(--size)*4);
         line-height: calc(var(--size)*3);
     }
 }
