--- a/assets/css/blocks/news.css
+++ b/assets/css/blocks/news.css
@@ -80,24 +80,23 @@
 
 @media screen and (max-width:660px) {
     .prev__news {
-        padding: 0 5%;
+        padding: 0 8%;
     }
     .news {
-        width: calc(var(--size)*40);
+        width: 100%;
         height: 100%;
         margin: 5% 1%;
     }
     .news__image img {
-        position: relative;
         width: 100%;
-        height: calc(var(--size)*20);
-        object-fit: cover;
+        height: 100%;
+        max-height: calc(var(--size)*40);
         margin-bottom: 3%;
     }
     .news__data {
         top: 10%;
         padding: 3%;
-        font-size: calc(var(--size)*3.5);
+        font-size: calc(var(--size)*4.5);
         z-index: 10;
         box-shadow: 3px 3px 5px black;
         color: lightgray;
@@ -105,10 +104,10 @@
     }
     .news__content {
         position: relative;
-        padding: 0 4%;
+        padding: 0 3%;
     }
     .news__title {
-        font-size: calc(var(--size)*4);
-        line-height: calc(var(--size)*5);
+        font-size: calc(var(--size)*5);
+        line-height: calc(var(--size)*5.5);
     }    
 }
