--- a/assets/css/blocks/menu.css
+++ b/assets/css/blocks/menu.css
@@ -180,3 +180,63 @@
     align-items: center;
     flex-direction: column;
 }
+
+@media screen and (max-width:660px) {
+    .menu__content {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        height: 90vh;
+    }
+    .menu__block {
+        max-width: 48%;
+        height: 90vh;
+        margin-right: 5px ;
+    }
+    .menu__item {
+        height: 10vh;
+    }
+    .header__search {
+        padding: 4%;
+        font-size: calc(var(--size)*4.4);
+        width: 50vw;
+        margin: 0 2% ;
+    }
+    .menu__li {
+        font-size: calc(var(--size)*7);
+        padding: 6% 1%;
+        line-height: calc(var(--size)*7);
+    }
+    .close__one {
+        width: calc(var(--size)*14);
+    }
+    .close__two {
+        margin: -10px 0;
+        width: calc(var(--size)*14);
+    }
+    .menu__div {
+        display: flex;
+        justify-content: start;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 100%;
+        max-width: 50%;
+        margin: 0 2%;
+    }
+    .menu__parametr {
+        display: none;
+        height: 90vh;
+    }
+    .menu__a {
+        text-transform: uppercase;
+        font-size: calc(var(--size)*6);
+        padding: 3% 1%;
+        line-height: calc(var(--size)*6);
+    }
+    .header__p {
+        font-size: calc(var(--size)*3);
+        margin: 5%
+    }    
+}
